many tests and lesson 5 class

--- a/Lectures/Lesson 5 - RUBY Gems & Documentation.ipynb
+++ b/Lectures/Lesson 5 - RUBY Gems & Documentation.ipynb
@@ -46,9 +46,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "#<XmlSimple:0x00005640577e2438 @default_options=nil, @options={}, @_var_values=nil>"
+      ]
+     },
+     "execution_count": 1,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# so we have...\n",
     "require 'xmlsimple'\n",
@@ -88,7 +99,7 @@
     "## Look at more of the documentation\n",
     "\n",
     "\n",
-    "### Class Method Summary\n",
+    "### Class Method Summary, documented with a .\n",
     "\n",
     "    .xml_in(string = nil, options = nil) ⇒ Object\n",
     "    This is the functional version of the instance method xml_in.\n",
@@ -97,7 +108,7 @@
     "    .xml_out(hash, options = nil) ⇒ Object\n",
     "    This is the functional version of the instance method xml_out.\n",
     "\n",
-    "### Instance Method Summary\n",
+    "### Instance Method Summary, documented with a '#'\n",
     "\n",
     "    #initialize(defaults = nil) ⇒ XmlSimple constructor\n",
     "    Creates and initializes a new XmlSimple object.\n",
@@ -119,9 +130,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "hello1\n",
+      "hello2\n"
+     ]
+    }
+   ],
    "source": [
     "require 'xmlsimple'\n",
     "\n",
@@ -203,22 +223,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{\"data\"=>[{\"name\"=>\"Arabidopsis\", \"id\"=>\"3701\", \"leaf\"=>\"0\", \"scientific_name\"=>\"Arabidopsis\", \"children\"=>[{\"name\"=>\"Arabidopsis kamchatica\", \"id\"=>\"59690\", \"leaf\"=>\"0\", \"scientific_name\"=>\"Arabidopsis kamchatica\", \"tags\"=>[{\"name\"=>[\"Arabidopsis kamchatica\"], \"authority\"=>[\"Arabidopsis kamchatica (Fisch. ex DC.) K.Shimizu & Kudoh\", \"Arabidopsis lyrata subsp. kamchatica (Fisch. ex DC.) O'Kane & Al-Shehbaz\", \"Arabidopsis morrisonensis Hayata\", \"Arabis kamchatica (Fisch. ex DC.) Ledeb.\", \"Arabis lyrata var. kamchatica Fisch. ex DC.\", \"Cardaminopsis kamchatica (Fisch. ex DC.) O.E.Schulz\"], \"merged_taxon_id\"=>[\"675860\"], \"scientific_name\"=>[\"Arabidopsis kamchatica\"], \"synonym\"=>[\"Arabidopsis kamtschatica\", \"Arabidopsis lyrata subsp. kamchatica\", \"Arabidopsis morrisonensis\", \"Arabis kamchatica\", \"Arabis lyrata var. kamchatica\", \"Cardaminopsis kamchatica\"]}]}, {\"name\"=>\"Arabidopsis arenosa x Arabidopsis lyrata\", \"id\"=>\"2608267\", \"leaf\"=>\"1\", \"scientific_name\"=>\"Arabidopsis arenosa x Arabidopsis lyrata\", \"tags\"=>[{\"name\"=>[\"Arabidopsis arenosa x Arabidopsis lyrata\"], \"scientific_name\"=>[\"Arabidopsis arenosa x Arabidopsis lyrata\"]}]}, {\"name\"=>\"Arabidopsis suecica\", \"id\"=>\"45249\", \"leaf\"=>\"1\", \"scientific_name\"=>\"Arabidopsis suecica\", \"tags\"=>[{\"name\"=>[\"Arabidopsis suecica\"], \"authority\"=>[\"Arabidopsis suecica (Fr.) Norrl., 1924\", \"Arabis suecica (Fr.) Nyman, 1855\", \"Arabis thaliana subsp. suecica Fr., 1846\", \"Cardaminopsis suecica (Fr.) Hiitonen ex Hyl., 1941\", \"Hylandra suecica (Fr.) A.Love, 1961\"], \"scientific_name\"=>[\"Arabidopsis suecica\"], \"synonym\"=>[\"Arabis suecica\", \"Arabis thaliana subsp. suecica\", \"Cardaminopsis suecica\", \"Hylandra suecica\"]}]}, {\"name\"=>\"Arabidopsis arenosa\", \"id\"=>\"38785\", \"leaf\"=>\"0\", \"scientific_name\"=>\"Arabidopsis arenosa\", \"tags\"=>[{\"name\"=>[\"Arabidopsis arenosa\"], \"authority\"=>[\"Arabidopsis arenosa (L.) Lawalree\", \"Arabis arenosa (L.) Scop.\", \"Cardaminopsis arenosa (L.) Hayek.\"], \"scientific_name\"=>[\"Arabidopsis arenosa\"], \"synonym\"=>[\"Arabis arenosa\", \"Cardaminopsis arenosa\"]}]}, {\"name\"=>\"Arabidopsis lyrata\", \"id\"=>\"59689\", \"leaf\"=>\"0\", \"scientific_name\"=>\"Arabidopsis lyrata\", \"tags\"=>[{\"name\"=>[\"Arabidopsis lyrata\"], \"authority\"=>[\"Arabidopsis lyrata (L.) O'Kane & Al-Shehbaz\"], \"common_name\"=>[\"lyrate rockcress\"], \"merged_taxon_id\"=>[\"63679\"], \"scientific_name\"=>[\"Arabidopsis lyrata\"]}]}, {\"name\"=>\"Arabidopsis thaliana x Arabidopsis lyrata\", \"id\"=>\"869750\", \"leaf\"=>\"1\", \"scientific_name\"=>\"Arabidopsis thaliana x Arabidopsis lyrata\", \"tags\"=>[{\"name\"=>[\"Arabidopsis thaliana x Arabidopsis lyrata\"], \"scientific_name\"=>[\"Arabidopsis thaliana x Arabidopsis lyrata\"]}]}, {\"name\"=>\"Arabidopsis arenosa x Arabidopsis thaliana\", \"id\"=>\"378006\", \"leaf\"=>\"1\", \"scientific_name\"=>\"Arabidopsis arenosa x Arabidopsis thaliana\", \"tags\"=>[{\"name\"=>[\"Arabidopsis arenosa x Arabidopsis thaliana\"], \"scientific_name\"=>[\"Arabidopsis arenosa x Arabidopsis thaliana\"]}]}, {\"name\"=>\"(Arabidopsis thaliana x Arabidopsis arenosa) x Arabidopsis suecica\", \"id\"=>\"1328956\", \"leaf\"=>\"1\", \"scientific_name\"=>\"(Arabidopsis thaliana x Arabidopsis arenosa) x Arabidopsis suecica\", \"tags\"=>[{\"name\"=>[\"(Arabidopsis thaliana x Arabidopsis arenosa) x Arabidopsis suecica\"], \"scientific_name\"=>[\"(Arabidopsis thaliana x Arabidopsis arenosa) x Arabidopsis suecica\"]}]}, {\"name\"=>\"Arabidopsis thaliana\", \"id\"=>\"3702\", \"leaf\"=>\"1\", \"scientific_name\"=>\"Arabidopsis thaliana\", \"tags\"=>[{\"name\"=>[\"Arabidopsis thaliana\"], \"authority\"=>[\"Arabidopsis thaliana (L.) Heynh.\"], \"common_name\"=>[\"mouse-ear cress\", \"thale-cress\"], \"genbank_common_name\"=>[\"thale cress\"], \"scientific_name\"=>[\"Arabidopsis thaliana\"]}]}, {\"name\"=>\"Arabidopsis cebennensis\", \"id\"=>\"97979\", \"leaf\"=>\"1\", \"scientific_name\"=>\"Arabidopsis cebennensis\", \"tags\"=>[{\"name\"=>[\"Arabidopsis cebennensis\"], \"authority\"=>[\"Arabidopsis cebennensis (DC.) O'Kane & Al-Shehbaz\"], \"scientific_name\"=>[\"Arabidopsis cebennensis\"]}]}, {\"name\"=>\"Arabidopsis arenicola\", \"id\"=>\"347883\", \"leaf\"=>\"0\", \"scientific_name\"=>\"Arabidopsis arenicola\", \"tags\"=>[{\"name\"=>[\"Arabidopsis arenicola\"], \"authority\"=>[\"Arabidopsis arenicola (Richardson ex Hook.) Al-Shehbaz et al.\", \"Arabis arenicola (Richardson) Gelert\"], \"scientific_name\"=>[\"Arabidopsis arenicola\"], \"synonym\"=>[\"Arabis arenicola\"]}]}, {\"name\"=>\"Arabidopsis thaliana x Arabidopsis arenosa\", \"id\"=>\"1240361\", \"leaf\"=>\"1\", \"scientific_name\"=>\"Arabidopsis thaliana x Arabidopsis arenosa\", \"tags\"=>[{\"name\"=>[\"Arabidopsis thaliana x Arabidopsis arenosa\"], \"scientific_name\"=>[\"Arabidopsis thaliana x Arabidopsis arenosa\"]}]}, {\"name\"=>\"Arabidopsis petrogena\", \"id\"=>\"302551\", \"leaf\"=>\"0\", \"scientific_name\"=>\"Arabidopsis petrogena\", \"tags\"=>[{\"name\"=>[\"Arabidopsis petrogena\"], \"authority\"=>[\"Arabidopsis petrogena (A.Kern.) V.I.Dorof.\", \"Cardaminopsis petrogena (A.Kern.) Mesicek\"], \"scientific_name\"=>[\"Arabidopsis petrogena\"], \"synonym\"=>[\"Cardaminopsis petrogena\"]}]}, {\"name\"=>\"Arabidopsis croatica\", \"id\"=>\"97980\", \"leaf\"=>\"1\", \"scientific_name\"=>\"Arabidopsis croatica\", \"tags\"=>[{\"name\"=>[\"Arabidopsis croatica\"], \"authority\"=>[\"Arabidopsis croatica (Schott) O'Kane & Al-Shehbaz\", \"Cardaminopsis croatica (Schott) Jav.\"], \"scientific_name\"=>[\"Arabidopsis croatica\"], \"synonym\"=>[\"Cardaminopsis croatica\"]}]}, {\"name\"=>\"Arabidopsis halleri\", \"id\"=>\"81970\", \"leaf\"=>\"0\", \"scientific_name\"=>\"Arabidopsis halleri\", \"tags\"=>[{\"name\"=>[\"Arabidopsis halleri\"], \"authority\"=>[\"Arabidopsis halleri (L.) O'Kane & Al-Shehbaz\", \"Arabis halleri L.\", \"Cardaminopsis halleri (L.) Hayek\"], \"scientific_name\"=>[\"Arabidopsis halleri\"], \"synonym\"=>[\"Arabis halleri\", \"Cardaminopsis halleri\"]}]}, {\"name\"=>\"Arabidopsis thaliana x Arabidopsis halleri subsp. gemmifera\", \"id\"=>\"869751\", \"leaf\"=>\"1\", \"scientific_name\"=>\"Arabidopsis thaliana x Arabidopsis halleri subsp. gemmifera\", \"tags\"=>[{\"name\"=>[\"Arabidopsis thaliana x Arabidopsis halleri subsp. gemmifera\"], \"scientific_name\"=>[\"Arabidopsis thaliana x Arabidopsis halleri subsp. gemmifera\"]}]}, {\"name\"=>\"unclassified Arabidopsis\", \"id\"=>\"2642721\", \"leaf\"=>\"0\", \"scientific_name\"=>\"unclassified Arabidopsis\", \"tags\"=>[{\"name\"=>[\"unclassified Arabidopsis\"], \"scientific_name\"=>[\"unclassified Arabidopsis\"]}]}, {\"name\"=>\"Arabidopsis thaliana x Arabidopsis halleri\", \"id\"=>\"1837063\", \"leaf\"=>\"1\", \"scientific_name\"=>\"Arabidopsis thaliana x Arabidopsis halleri\", \"tags\"=>[{\"name\"=>[\"Arabidopsis thaliana x Arabidopsis halleri\"], \"scientific_name\"=>[\"Arabidopsis thaliana x Arabidopsis halleri\"]}]}, {\"name\"=>\"Arabidopsis lyrata x Arabidopsis halleri\", \"id\"=>\"2486701\", \"leaf\"=>\"1\", \"scientific_name\"=>\"Arabidopsis lyrata x Arabidopsis halleri\", \"tags\"=>[{\"name\"=>[\"Arabidopsis lyrata x Arabidopsis halleri\"], \"scientific_name\"=>[\"Arabidopsis lyrata x Arabidopsis halleri\"]}]}, {\"name\"=>\"Arabidopsis neglecta\", \"id\"=>\"45251\", \"leaf\"=>\"0\", \"scientific_name\"=>\"Arabidopsis neglecta\", \"tags\"=>[{\"name\"=>[\"Arabidopsis neglecta\"], \"authority\"=>[\"Arabidopsis neglecta (Schult.) O'Kane & Al-Shehbaz\", \"Arabis neglecta Schult.\", \"Cardaminopsis neglecta (Schult.) Hayek\"], \"scientific_name\"=>[\"Arabidopsis neglecta\"], \"synonym\"=>[\"Arabis neglecta\", \"Cardaminopsis neglecta\"]}]}, {\"name\"=>\"Arabidopsis umezawana\", \"id\"=>\"1547872\", \"leaf\"=>\"1\", \"scientific_name\"=>\"Arabidopsis umezawana\", \"tags\"=>[{\"name\"=>[\"Arabidopsis umezawana\"], \"authority\"=>[\"Arabidopsis umezawana Kadota\"], \"scientific_name\"=>[\"Arabidopsis umezawana\"]}]}, {\"name\"=>\"Arabidopsis pedemontana\", \"id\"=>\"412662\", \"leaf\"=>\"1\", \"scientific_name\"=>\"Arabidopsis pedemontana\", \"tags\"=>[{\"name\"=>[\"Arabidopsis pedemontana\"], \"authority\"=>[\"Arabidopsis pedemontana (Boiss.) O'Kane & Al-Shehbaz\"], \"scientific_name\"=>[\"Arabidopsis pedemontana\"]}]}], \"parent\"=>[{\"name\"=>\"Camelineae\", \"id\"=>\"980083\", \"leaf\"=>\"0\", \"scientific_name\"=>\"Camelineae\", \"tags\"=>[{\"name\"=>[\"Camelineae\"], \"authority\"=>[\"Camelineae DC., 1821\"], \"scientific_name\"=>[\"Camelineae\"]}]}], \"tags\"=>[{\"name\"=>[\"Arabidopsis\"], \"authority\"=>[\"Arabidopsis (DC.) Heynh., 1842\", \"Cardaminopsis Hayek\"], \"merged_taxon_id\"=>[\"45250\"], \"scientific_name\"=>[\"Arabidopsis\"], \"synonym\"=>[\"Cardaminopsis\"]}]}]}\n"
+     ]
+    }
+   ],
    "source": [
     "require 'rest-client'   \n",
     "require 'xmlsimple'\n",
     "\n",
     "\n",
-    "address = 'http://rest.ensembl.org/taxonomy/id/3701?content-type=text/xml'\n",
+    "address = 'http://rest.ensembl.org/taxonomy/id/3701?content-type=text/xml' # 3701 is the id\n",
     "response = RestClient.get(address)  # use the more efficient form of the rest client\n",
     "\n",
     "#puts response.body\n",
     "\n",
     "data = XmlSimple.xml_in(response.body)   # create the XML object from the response body (String)\n",
     "\n",
-    "#puts data\n",
+    "# the first element is ignored, the first tag.\n",
+    "puts data\n",
+    "abort\n",
     "#puts data[\"data\"][0].keys\n",
     "\n",
     "for child in data[\"data\"][0][\"children\"].each    # \n",
@@ -256,18 +286,113 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
+   "execution_count": 11,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "nucleus\n",
+      "\"A membrane-bounded organelle of eukaryotic cells in which chromosomes are housed and replicated. In most cells, the nucleus contains all of the cell's chromosomes except the organellar chromosomes, and is the site of RNA synthesis and processing. In some species, or in specialized cell types, RNA metabolism or DNA replication may be absent.\" [GOC:go_curators]\n",
+      "GO:0005634\n",
+      "[\"NIF_Subcellular:sao1702920020\", \"Wikipedia:Cell_nucleus\"]\n"
+     ]
+    }
+   ],
    "source": [
     "# put your code here\n",
-    "# TASK 5A\n",
+    "# TASK 5\n",
+    "require 'gene_ontology'  # the gem for gene ontology obo files\n",
+    "\n",
+    "go = GeneOntology.new.from_file(\"geneontology.obo\")\n",
+    "\n",
+    "term = go.id_to_term['GO:0005634']\n",
+    "\n",
+    "puts term.name\n",
+    "puts term.def\n",
+    "puts term.id\n",
+    "puts term.xref\n",
+    "\n",
+    "# https://github.com/princelab/gene_ontology/blob/master/lib/gene_ontology.rb\n",
     "\n",
     "# Note that the documentation for GeneOntology is not very friendly!!  \n",
     "# try to understand it yourself, and then we will go through it together...\n",
     "\n",
     "# hint:  after creating the GO object: go = GeneOntology.new(filename)\n",
     "# go.id_to_term[\"GO:0005634\"] returns a GeneOntology::Term object\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Introspection: ask an object about itself\n",
+    "\n",
+    "In bioruby, depending on the thing, we can't predict what object will come back\n",
+    "\n",
+    "We can use obj.class\n",
+    "\n",
+    "Or ask it what it can do: obj.public_methods\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "metadata": {
+    "scrolled": false
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[:header=, :id_to_term=, :parse_terms, :parse_header, :from_file, :id_to_term, :header, :__binding__, :dclone, :pry, :pretty_print_inspect, :pretty_print, :pretty_print_instance_variables, :pretty_print_cycle, :to_json, :instance_variable_set, :instance_variable_defined?, :remove_instance_variable, :instance_of?, :kind_of?, :is_a?, :tap, :instance_variable_get, :instance_variables, :method, :public_method, :singleton_method, :define_singleton_method, :public_send, :pretty_inspect, :extend, :to_enum, :enum_for, :<=>, :===, :=~, :!~, :eql?, :respond_to?, :freeze, :inspect, :object_id, :send, :to_s, :display, :nil?, :hash, :class, :singleton_class, :clone, :dup, :itself, :yield_self, :taint, :tainted?, :untrust, :untaint, :trust, :untrusted?, :methods, :frozen?, :protected_methods, :singleton_methods, :public_methods, :private_methods, :!, :equal?, :instance_eval, :==, :instance_exec, :!=, :__send__, :__id__]\n"
+     ]
+    }
+   ],
+   "source": [
+    "puts go.public_methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[:id, :name, :is_a, :inspect, :find_level, :alt_id, :intersection_of, :replaced_by, :created_by, :creation_date, :disjoint_from, :relationship, :def, :name=, :subset, :synonym, :comment=, :consider, :property_value, :xref, :each, :namespace, :trace_to_level, :is_obsolete, :id=, :alt_id=, :intersection_of=, :replaced_by=, :created_by=, :creation_date=, :disjoint_from=, :relationship=, :namespace=, :def=, :subset=, :is_obsolete=, :synonym=, :xref=, :consider=, :is_a=, :property_value=, :level, :level=, :comment, :to_h, :include?, :to_set, :max, :min, :find, :to_a, :entries, :sort, :sort_by, :grep, :grep_v, :count, :detect, :find_index, :find_all, :select, :reject, :collect, :map, :flat_map, :collect_concat, :inject, :reduce, :partition, :group_by, :first, :all?, :any?, :one?, :none?, :minmax, :min_by, :max_by, :minmax_by, :member?, :each_with_index, :reverse_each, :each_entry, :each_slice, :each_cons, :each_with_object, :zip, :take, :take_while, :drop, :drop_while, :cycle, :chunk, :slice_before, :slice_after, :slice_when, :chunk_while, :sum, :uniq, :lazy, :__binding__, :dclone, :pry, :pretty_print_inspect, :pretty_print, :pretty_print_instance_variables, :pretty_print_cycle, :to_json, :instance_variable_set, :instance_variable_defined?, :remove_instance_variable, :instance_of?, :kind_of?, :is_a?, :tap, :instance_variable_get, :instance_variables, :method, :public_method, :singleton_method, :define_singleton_method, :public_send, :pretty_inspect, :extend, :to_enum, :enum_for, :<=>, :===, :=~, :!~, :eql?, :respond_to?, :freeze, :object_id, :send, :to_s, :display, :nil?, :hash, :class, :singleton_class, :clone, :dup, :itself, :yield_self, :taint, :tainted?, :untrust, :untaint, :trust, :untrusted?, :methods, :frozen?, :protected_methods, :singleton_methods, :public_methods, :private_methods, :!, :equal?, :instance_eval, :==, :instance_exec, :!=, :__send__, :__id__]\n"
+     ]
+    }
+   ],
+   "source": [
+    "puts term.public_methods"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[:id, :name, :is_a, :find_level, :alt_id, :intersection_of, :replaced_by, :created_by, :creation_date, :disjoint_from, :relationship, :def, :name=, :subset, :synonym, :comment=, :consider, :property_value, :xref, :each, :namespace, :trace_to_level, :is_obsolete, :id=, :alt_id=, :intersection_of=, :replaced_by=, :created_by=, :creation_date=, :disjoint_from=, :relationship=, :namespace=, :def=, :subset=, :is_obsolete=, :synonym=, :xref=, :consider=, :is_a=, :property_value=, :level, :level=, :comment, :to_h, :include?, :to_set, :max, :min, :find, :to_a, :entries, :sort, :sort_by, :grep, :grep_v, :count, :detect, :find_index, :find_all, :select, :reject, :collect, :map, :flat_map, :collect_concat, :inject, :reduce, :partition, :group_by, :first, :all?, :any?, :one?, :none?, :minmax, :min_by, :max_by, :minmax_by, :member?, :each_with_index, :reverse_each, :each_entry, :each_slice, :each_cons, :each_with_object, :zip, :take, :take_while, :drop, :drop_while, :cycle, :chunk, :slice_before, :slice_after, :slice_when, :chunk_while, :sum, :uniq, :lazy]\n"
+     ]
+    }
+   ],
+   "source": [
+    "puts term.public_methods - Object.new.public_methods # removing the ones from Object"
    ]
   },
   {
@@ -435,7 +560,9 @@
    "source": [
     "This class has three methods:  \"initialize\", (called with Patient.new()),  \"name\" and \"age\"\n",
     "\n",
-    "We should document the behavior of these.   This is how it looks when we document the object using YARD tags\n"
+    "We should document the behavior of these.   This is how it looks when we document the object using YARD tags\n",
+    "\n",
+    "The empty lines are important!"
    ]
   },
   {
